crates/stylex-shared/tests/evaluation/stylex_evaluation/stylex_import_evaluation/evaluation_of_imported_values_works_based_on_configuration/snapshots/fold__evaluation__stylex_evaluation__stylex_import_evaluation__evaluation_of_imported_values_works_based_on_configuration__theme_name_hashing_based_on_filename_alone_works__imported_vars_with_stylex_suffix_can_be_used_as_style_keys_dynamically.snap
---
source: crates/stylex-shared/tests/evaluation/stylex_evaluation/stylex_import_evaluation/evaluation_of_imported_values_works_based_on_configuration/theme_name_hashing_based_on_filename_alone_works.rs
expression: transformation
snapshot_kind: text
---
import _inject from "@stylexjs/stylex/lib/stylex-inject";
var _inject2 = _inject;
import "otherFile.stylex";
import stylex from 'stylex';
import { MyTheme } from 'otherFile.stylex';
_inject2(".__hashed_var__b69i2g{--__hashed_var__1jqb1tb:var(----__hashed_var__1jqb1tb)}", 1);
_inject2('@property ----__hashed_var__1jqb1tb { syntax: "*"; inherits: false; initial-value: "*"; }', 0);
export const styles = {
    color: (color)=>[
            {
                "--__hashed_var__1jqb1tb": color == null ? null : "__hashed_var__b69i2g",
                $$css: true
            },
            {
                "----__hashed_var__1jqb1tb": color != null ? color : undefined
            }
        ]
};
stylex.props(styles.color('red'));
