crates/stylex-shared/tests/evaluation/stylex_evaluation/stylex_import_evaluation/evaluation_of_imported_values_works_based_on_configuration/snapshots/fold__evaluation__stylex_evaluation__stylex_import_evaluation__evaluation_of_imported_values_works_based_on_configuration__theme_name_hashing_based_on_filename_alone_works__imported_vars_with_stylex_suffix_used_as_renamed_style_keys_dynamically.snap
---
source: crates/stylex-shared/tests/evaluation/stylex_evaluation/stylex_import_evaluation/evaluation_of_imported_values_works_based_on_configuration/theme_name_hashing_based_on_filename_alone_works.rs
expression: transformation
---
import _inject from "@stylexjs/stylex/lib/stylex-inject";
var _inject2 = _inject;
import "otherFile.stylex";
import stylex from 'stylex';
import { theme as MyTheme } from 'otherFile.stylex';
_inject2(".__hashed_var__z0fnog{--__hashed_var__11epo5g:var(----__hashed_var__11epo5g)}", 1);
_inject2('@property ----__hashed_var__11epo5g { syntax: "*"; inherits: false; }', 0);
export const styles = {
    color: (color)=>[
            {
                "--__hashed_var__11epo5g": color == null ? null : "__hashed_var__z0fnog",
                $$css: true
            },
            {
                "----__hashed_var__11epo5g": color != null ? color : undefined
            }
        ]
};
stylex.props(styles.color('red'));
